# server-client-rust

./: .gitignore  Cargo.toml  README.md  deny.toml  frontend-2fd3e72fc40a21a3.js  frontend-2fd3e72fc40a21a3_bg.wasm  frontend-92748c44e63341ba.js  frontend-92748c44e63341ba_bg.wasm  frontend-c44cb231d98d8a0d.js  frontend-c44cb231d98d8a0d_bg.wasm  index.html  prod.sh  sitemap.txt  sitemap.xml
.github/workflows/: audit-on-push.yml  backend.yml  frontend.yml  general.yml  gh-pages.yml
frontend/: Cargo.toml  Trunk.toml
frontend/contents/: metadata.json
frontend/src/: lib.rs  main.rs  posts.rs  utils.rs
frontend/tests/: test_personal_generator.rs  test_posts.rs
scripts/: init_db.sh
server/: .env  Cargo.toml
server/config/: default.yaml  production.yaml  test.yaml
server/migrations/: 20220924070448_create_subscription_table.sql
server/src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs
server/src/routes/: health_check.rs  mod.rs  subscriptions.rs
server/tests/: health_check.rs  subscription.rs  utils.rs
