[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
axum = { version = "0.5.16", features = ["http2", "macros", "multipart"] }
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
config = "0.13.2"
hyper = { version = "0.14.20", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.35"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace", "request-id"] }
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "registry"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.11"
tower = { version = "0.4.13", features = ["util"] }
